--- a/BFStudio/BFStudio.csproj
+++ b/BFStudio/BFStudio.csproj
@@ -214,6 +214,8 @@
     <Compile Include="MainPages\RegisterUser\Controllers\RegisterUserController.cs" />
     <Compile Include="MainPages\Top\Controllers\TopController.cs" />
     <Compile Include="MainPages\Top\Models\TopModel.cs" />
+    <Compile Include="Pages\UserSettings\Controllers\UserSettingsController.cs" />
+    <Compile Include="Pages\UserSettings\Models\UserSettingsModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Utility\Manager\ApplicationUserManager.cs" />
@@ -263,6 +265,8 @@
     <Content Include="MainPages\Login\Views\Index.cshtml" />
     <Content Include="MainPages\Shared\_RenderBodyOnly.cshtml" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Content Include="Pages\UserSettings\Views\Index.cshtml" />
+    <Content Include="Pages\Web.config" />
     <None Include="Properties\PublishProfiles\YuuServer.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -327,9 +331,6 @@
     <Folder Include="Pages\Tickets\Models\" />
     <Folder Include="Pages\Tickets\Views\" />
     <Folder Include="Pages\Top\" />
-    <Folder Include="Pages\UserSettings\Controllers\" />
-    <Folder Include="Pages\UserSettings\Models\" />
-    <Folder Include="Pages\UserSettings\Views\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
