--- a/BFStudio/BFStudio.csproj
+++ b/BFStudio/BFStudio.csproj
@@ -220,7 +220,9 @@
     <Compile Include="Startup.cs" />
     <Compile Include="Utility\Manager\ApplicationUserManager.cs" />
     <Compile Include="Utility\Manager\BFStudioUserStore.cs" />
+    <Compile Include="Utility\MVC\BaseModel.cs" />
     <Compile Include="Utility\MVC\BaseController.cs" />
+    <Compile Include="Utility\MVC\Constants.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -245,6 +247,17 @@
     <Content Include="Content\menu.css.map">
       <DependentUpon>menu.css</DependentUpon>
     </Content>
+    <Content Include="Scripts\jquery.blockUI.js" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="Pages\_ViewStart.cshtml" />
+    <None Include="Web.Debug.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
+    <None Include="Web.Release.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
     <EntityDeploy Include="Entity\DBManageModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>DBManageModel.Designer.cs</LastGenOutput>
@@ -280,15 +293,6 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config">
-      <SubType>Designer</SubType>
-    </Content>
-    <Content Include="Web.Debug.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </Content>
-    <Content Include="Web.Release.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </Content>
     <Content Include="MainPages\Web.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="MainPages\RegisterUser\Views\Create.cshtml" />
