--- a/BFStudio/BFStudio.csproj
+++ b/BFStudio/BFStudio.csproj
@@ -271,6 +271,7 @@
     <Compile Include="MainPages\Login\Controllers\LoginController.cs" />
     <Compile Include="MainPages\Login\Models\LoginModel.cs" />
     <Compile Include="MainPages\RegisterUser\Controllers\RegisterUserController.cs" />
+    <Compile Include="MainPages\Login\Models\CreateUserModel.cs" />
     <Compile Include="MainPages\Top\Controllers\TopController.cs" />
     <Compile Include="MainPages\Top\Models\TopModel.cs" />
     <Compile Include="Pages\Database\Controllers\DatabaseController.cs" />
@@ -339,6 +340,7 @@
     </Content>
     <None Include="Content\Site.less" />
     <Content Include="Log4Net.Config.xml" />
+    <Content Include="MainPages\Login\Views\Create.cshtml" />
     <Content Include="Pages\ChatRoom\Views\Index.cshtml">
       <SubType>Code</SubType>
     </Content>
@@ -359,6 +361,8 @@
     <Content Include="Scripts\jquery.dataTables.min.js" />
     <Content Include="Scripts\jquery.signalR-2.2.0.js" />
     <Content Include="Scripts\jquery.signalR-2.2.0.min.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -406,7 +410,6 @@
     <Content Include="Scripts\_references.js" />
     <Content Include="MainPages\Web.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="MainPages\RegisterUser\Views\Create.cshtml" />
     <Content Include="MainPages\RegisterUser\Views\Delete.cshtml" />
     <Content Include="MainPages\RegisterUser\Views\Details.cshtml" />
     <Content Include="MainPages\RegisterUser\Views\Edit.cshtml" />
